Remove Guava dependency and update to Java 9 (#272)